--- a/README.org
+++ b/README.org
@@ -59,5 +59,6 @@ echo "source ~/.adb.sh" >> ~/.zshrc
 ** kbuild.py
    Used to rebuild a single directory in kernel source tree.
    #+begin_src bash
-     ./kbuild.py -k ~/work/kernel -d drivers/clk/
+   ./kbuild.py -k ~/work/kernel -d init
+   ./kbuild.py -k ~/work/j5/kernel -d init/main.c
    #+end_src
